# opengl-raytracer

./: .gitignore  .gitmodules  CMakeLists.txt
cmake/: FindGLFW3.cmake  FindGLM.cmake  FindVulkan.cmake
src/: CMakeLists.txt  api.h  argparse.h  common.h  event.h  framebuffer_object.cpp  framebuffer_object.h  main.cpp  shader_program.cpp  uncopyable.h  vertex_array_object.cpp  window.cpp  window.h
src/core/: api.h  argparse.h  bvh.cpp  bvh.h  common.h  framebuffer_object.cpp  framebuffer_object.h  scene.cpp  scene.h  shader_program.cpp  shader_program.h  shader_stage.cpp  shader_stage.h  texture.cpp  texture.h  texture_buffer.cpp  texture_buffer.h  timer.h  trimesh.cpp  trimesh.h  uncopyable.h  vertex_array_object.h  volume.cpp  volume.h  window.cpp  window.h
src/ext/glad/: glad.c  glad.h
src/shaders/: raytrace.frag  raytrace.vert  screen.frag  screen.vert
src/vulkan/: vkengine.cpp  vkengine.h  vkutils.h
